[tool.poetry]
name = "iso15118-check-digit"
version = "0.0.0.dev0"
description = "Calculation of check digit accorgin to the iso15118 standard."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
